metadata/force-app/main/default/objects/CustomName_PMrHi__c/CustomName_PMrHi__c.object-meta.xml
<CustomObject>
    <description>Description_NJjXF</description>
    <label>CustomLabel_shFql</label>
    <nameField>
        <label>CustomLabel_shFql</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_shFqls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>