metadata/force-app/main/default/objects/CustomName_PMrHi__c/fields/CustomField_EeUuC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_EeUuC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjhxyw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>